fixed left and right scroll *overflow-x*

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   min-height: 100vh;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 .app {
@@ -99,11 +100,13 @@
 @media (max-width: 768px) {
   .app {
     flex-direction: column;
+    overflow-x: hidden;
   }
   
   .sidebar-container {
     width: 100%;
     padding: 20px;
+    overflow-x: hidden;
   }
   
 .sidebar {
@@ -111,6 +114,7 @@
   height: 93vh;
   padding: 28px;
   overflow: auto;
+  overflow-x: hidden;
    
   display: grid;
   grid-template-columns: repeat(1, 1fr);
